src/app/components/NetworkRibbon/_networkRibbon.scss
.title {
    font-size: 23px;
    line-height: 24px;
    font-weight: 600;
    text-transform: none;
  }
.subtitle {
  font-size: 14px;
  line-height: 18px;
  color: #A52222;
  font-weight: 300;
  text-transform: none;
  width: 42%;
}
.titleTut {
  font-size: 11px;
  line-height: 18px;
  color: #ffc107;
  font-weight: 200;
  text-decoration: underline;
  width: 35%;
}
.logo {
  width: 160px;
  height: 160px;
  background-color: #2d2d2d;
  border-radius: 10%;
  border-width: 5px;
  border-color: white;
}

